<resources>
    <string name="app_name">Covid-19 Tracker</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoicm9ja29rMTAiLCJhIjoiY2s3bWx1NnpuMDlvMTNucDN0cGg3bXlvMCJ9.Jg-yD79ykbgrVd69nI-kQQ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="confirmed">Confirmed:</string>
    <string name="active">Active:</string>
    <string name="death">Deaths:</string>
    <string name="countries_flag_image">Countries flag image</string>
    <string name="heatmap">Heatmap</string>
    <string name="settings">Settings</string>
    <string name="facts">Facts</string>
    <string name="statistics">Statistics</string>
    <string name="recovered">Recovered:</string>

    <!-- facts fragment string resource title-->
    <string name="question">The information provided below are for education purpose only. Please
    contact your local health authority</string>
    <string name="question1">What is Coronavirus?</string>
    <string name="question2">How long can COVID-19 live on surface?</string>
    <string name="question4">How does the Coronavirus disease spread?</string>
    <string name="question5">How do I know if someone is infected?</string>
    <string name="question7">How do I protect myself?</string>
    <string name="question8">Facts about coronavirus</string>

    <!-- facts fragment string resource answers-->
    <string name="answer1">"Coronavirus disease(COVID-19) is an infectious disease caused by a new virus"
    </string>
    <string name="answer4">Coronavirus disease spreads through contact with an infected person when they
    cough or sneeze. it also spreads when a person tourches a surface or object that has the virus on
    it, then touches their eyes,nose or mouth. Source(Who.int)</string>
    <string name="answer7">
        "Wash your hands regularly for 20 seconds. with soap and water or alcohol base hand rob\n\t
        Cover your nose and mouth with a disposable tissue or flex elbow when you cough or sneeze\n\t
        Avoid close contact with people who are unwell (1metre to 3metre)\n\t
        Stay home and self isolate from others in the household if you feel unwell</string>
    <string name="answer2">It is not certain how long the virus that causes COVID-19 survives on surfaces,
        but it seems to behave like other coronaviruses. Studies suggest that coronaviruses (including preliminary
        information on the COVID-19 virus) may persist on surfaces for a few hours or up to several days.</string>
    <string name="answer5">
        "People may experience:\n\t cough\n\t fever\n\t Sore throat\n\t Tiredness\n\t difficulty breathing (severe cases)\n\tUnexplained loss of taste or smell\n\t In rare cases, COVID-19 can lead to severe respiratory problems, kidney failure or death."
    </string>
    <string name="answer6"></string>
    <string name="answer8">
        "COVID-19 virus can be transmitted in areas with hot and humid climates.\n\nCold weather and snow <b>CANNOT</b> kill the new coronavirus.\n\n
        Taking a hot bath does not prevent the new coronavirus disease.\n\n
        The new coronavirus <b>CANNOT</b> be transmitted through mosquito bites.\n\n
        Spraying alcohol or chlorine all over your body will not kill viruses that have already entered your body.\n\n
        Vaccines against pneumonia, such as pneumococcal vaccine and Haemophilus influenza type B (Hib) vaccine, do not provide protection against the new coronavirus.\n\n
        Using antibiotics <b>CANNOT</b> cure you of coranvirus. Antibiotics do not work against viruses, only bacteria.\n\n"


    </string>

</resources>
