<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout_facts"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height">
            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/collapsible_toolbar_facts"
                app:contentScrim="@color/white_50"
                app:expandedTitleGravity="top"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/tool_bar_facts"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"/>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView_facts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_nav_height"
            android:layout_gravity="bottom|center"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/factsFragment"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question"/>
                <TextView
                    android:id="@+id/question1"
                    android:text="@string/question1"
                    style="@style/title_text_style"/>
                <TextView
                    android:id="@+id/answer1"
                    android:text="@string/answer1"
                    style="@style/answer_text_style"/>
                <TextView
                    android:id="@+id/question4"
                    android:text="@string/question4"
                    style="@style/title_text_style"/>
                <TextView
                    android:id="@+id/answer4"
                    android:text="@string/answer4"
                    style="@style/answer_text_style"/>
                <TextView
                    android:id="@+id/question2"
                    android:text="@string/question2"
                    style="@style/title_text_style"/>
                <TextView
                    android:id="@+id/answer2"
                    android:text="@string/answer2"
                    style="@style/answer_text_style"/>
                <TextView
                    android:id="@+id/question5"
                    android:text="@string/question5"
                    style="@style/title_text_style"/>
                <TextView
                    android:id="@+id/answer5"
                    android:text="@string/answer5"
                    style="@style/answer_text_style"/>
                <TextView
                    android:id="@+id/question7"
                    android:text="@string/question7"
                    style="@style/title_text_style"/>
                <TextView
                    android:id="@+id/answer7"
                    android:text="@string/answer7"
                    style="@style/answer_text_style"/>

                <TextView
                    android:id="@+id/myths_title"
                    android:text="@string/question8"
                    style="@style/title_text_style" />

                <TextView
                    android:id="@+id/myth_answer"
                    android:text="@string/answer8"
                    style="@style/answer_text_style" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
