<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <data>
        <variable
            name="regionalData"
            type="xyz.codegeek.outbreakvisualizer.data.database.RegionalData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/gray_background"
        android:paddingStart="@dimen/padding_start"
        android:paddingEnd="@dimen/padding_start">


        <TextView
            android:id="@+id/country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_start"
            android:paddingEnd="@dimen/padding_start"
            android:text="@{regionalData.country}"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Nigeria" />

        <ImageView
            android:id="@+id/flag"
            android:layout_width="136dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/countries_flag_image"
            app:imageFromUrl="@{regionalData.flag}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1.6:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/country"
            tools:srcCompat="@android:mipmap/sym_def_app_icon" />

        <TextView
            android:id="@+id/confirmed_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/confirmed"
            style="@style/middle_text"
            app:layout_constraintBottom_toTopOf="@+id/active_title"
            app:layout_constraintEnd_toStartOf="@+id/confirmed_cases"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/flag"
            app:layout_constraintTop_toBottomOf="@+id/country" />

        <TextView
            android:id="@+id/active_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/active"
            style="@style/middle_text"
            app:layout_constraintBottom_toTopOf="@+id/recovered_title"
            app:layout_constraintEnd_toEndOf="@+id/confirmed_title"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/confirmed_title"
            app:layout_constraintTop_toBottomOf="@+id/confirmed_title" />

        <TextView
            android:id="@+id/recovered_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recovered"
            style="@style/middle_text"
            app:layout_constraintBottom_toTopOf="@+id/death_title"
            app:layout_constraintEnd_toEndOf="@+id/active_title"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/active_title"
            app:layout_constraintTop_toBottomOf="@+id/active_title" />

        <TextView
            android:id="@+id/death_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/death"
            style="@style/middle_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/recovered_title"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/recovered_title"
            app:layout_constraintTop_toBottomOf="@+id/recovered_title" />

        <TextView
            android:id="@+id/recovered_cases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{``+ regionalData.recovered}"
            tools:text="2000"
            style="@style/middle_text"
            app:layout_constraintBottom_toTopOf="@+id/deaths"
            app:layout_constraintEnd_toEndOf="@+id/active_cases"
            app:layout_constraintStart_toStartOf="@+id/active_cases"
            app:layout_constraintTop_toBottomOf="@+id/active_cases" />

        <TextView
            android:id="@+id/confirmed_cases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{`` + regionalData.confirmed}"
            tools:text="10000"
            style="@style/middle_text"
            app:layout_constraintBottom_toTopOf="@+id/active_cases"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/country" />

        <TextView
            android:id="@+id/deaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{`` + regionalData.death}"
            tools:text="500"
            style="@style/middle_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/recovered_cases"
            app:layout_constraintStart_toStartOf="@+id/recovered_cases"
            app:layout_constraintTop_toBottomOf="@+id/recovered_cases" />

        <TextView
            android:id="@+id/active_cases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{`` + regionalData.active}"
            tools:text="7000"
            style="@style/middle_text"
            app:layout_constraintBottom_toTopOf="@+id/recovered_cases"
            app:layout_constraintEnd_toEndOf="@+id/confirmed_cases"
            app:layout_constraintStart_toStartOf="@+id/confirmed_cases"
            app:layout_constraintTop_toBottomOf="@+id/confirmed_cases" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
